Edit add product

--- a/POSTiw.csproj
+++ b/POSTiw.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddProdcutNew.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AddProdcutNew.Designer.cs">
+      <DependentUpon>AddProdcutNew.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AddQuantity.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AddQuantity.Designer.cs">
+      <DependentUpon>AddQuantity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,12 +72,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeProduct.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TypeProduct.Designer.cs">
+      <DependentUpon>TypeProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="Warehouse.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Warehouse.Designer.cs">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddProdcutNew.resx">
+      <DependentUpon>AddProdcutNew.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddQuantity.resx">
+      <DependentUpon>AddQuantity.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -81,6 +105,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TypeProduct.resx">
+      <DependentUpon>TypeProduct.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Warehouse.resx">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </EmbeddedResource>
