--- a/POSTiw.csproj
+++ b/POSTiw.csproj
@@ -33,8 +33,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,18 +47,19 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddProdcutNew.cs">
+    <Compile Include="PageWarehouse\AddProdcutNew.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="AddProdcutNew.Designer.cs">
+    <Compile Include="PageWarehouse\AddProdcutNew.Designer.cs">
       <DependentUpon>AddProdcutNew.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddQuantity.cs">
+    <Compile Include="PageWarehouse\AddQuantity.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="AddQuantity.Designer.cs">
+    <Compile Include="PageWarehouse\AddQuantity.Designer.cs">
       <DependentUpon>AddQuantity.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
@@ -70,12 +74,18 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypeProduct.cs">
+    <Compile Include="PageWarehouse\EditProduct.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="TypeProduct.Designer.cs">
+    <Compile Include="PageWarehouse\EditProduct.Designer.cs">
+      <DependentUpon>EditProduct.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PageWarehouse\TypeProduct.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PageWarehouse\TypeProduct.Designer.cs">
       <DependentUpon>TypeProduct.cs</DependentUpon>
     </Compile>
     <Compile Include="Warehouse.cs">
@@ -84,10 +94,10 @@
     <Compile Include="Warehouse.Designer.cs">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddProdcutNew.resx">
+    <EmbeddedResource Include="PageWarehouse\AddProdcutNew.resx">
       <DependentUpon>AddProdcutNew.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AddQuantity.resx">
+    <EmbeddedResource Include="PageWarehouse\AddQuantity.resx">
       <DependentUpon>AddQuantity.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
@@ -95,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PageWarehouse\EditProduct.resx">
+      <DependentUpon>EditProduct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -105,7 +118,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="TypeProduct.resx">
+    <EmbeddedResource Include="PageWarehouse\TypeProduct.resx">
       <DependentUpon>TypeProduct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Warehouse.resx">
@@ -124,5 +137,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
