--- a/POSTiw.csproj
+++ b/POSTiw.csproj
@@ -50,6 +50,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModalPage\CheckBill.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModalPage\CheckBill.Designer.cs">
+      <DependentUpon>CheckBill.cs</DependentUpon>
+    </Compile>
     <Compile Include="PageWarehouse\AddProdcutNew.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -94,6 +100,9 @@
     <Compile Include="Warehouse.Designer.cs">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ModalPage\CheckBill.resx">
+      <DependentUpon>CheckBill.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PageWarehouse\AddProdcutNew.resx">
       <DependentUpon>AddProdcutNew.cs</DependentUpon>
     </EmbeddedResource>
