--- a/POSTiw.csproj
+++ b/POSTiw.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Dapper.2.0.30\lib\net461\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -68,6 +71,8 @@
     <Compile Include="ModalPage\SelecteBill.Designer.cs">
       <DependentUpon>SelecteBill.cs</DependentUpon>
     </Compile>
+    <Compile Include="OrderDetail.cs" />
+    <Compile Include="OrderDTO.cs" />
     <Compile Include="PageWarehouse\AddProdcutNew.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -97,6 +102,12 @@
     </Compile>
     <Compile Include="PageWarehouse\EditProduct.Designer.cs">
       <DependentUpon>EditProduct.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PreviousBill.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PreviousBill.Designer.cs">
+      <DependentUpon>PreviousBill.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -136,6 +147,9 @@
     <EmbeddedResource Include="PageWarehouse\EditProduct.resx">
       <DependentUpon>EditProduct.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PreviousBill.resx">
+      <DependentUpon>PreviousBill.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -148,9 +162,12 @@
     <EmbeddedResource Include="PageWarehouse\TypeProduct.resx">
       <DependentUpon>TypeProduct.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ReprotOrder.rdlc" />
     <EmbeddedResource Include="Warehouse.resx">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
+    <None Include="Properties\DataSources\OrderDetail.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
