--- a/POSTiw.csproj
+++ b/POSTiw.csproj
@@ -65,17 +65,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModalPage\CheckBill.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ModalPage\CheckBill.Designer.cs">
       <DependentUpon>CheckBill.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormPrint.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormPrint.Designer.cs">
-      <DependentUpon>FormPrint.cs</DependentUpon>
     </Compile>
     <Compile Include="ModalPage\PauseBill.cs">
       <SubType>Form</SubType>
@@ -142,11 +142,11 @@
     <Compile Include="Warehouse.Designer.cs">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ModalPage\CheckBill.resx">
       <DependentUpon>CheckBill.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormPrint.resx">
-      <DependentUpon>FormPrint.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModalPage\PauseBill.resx">
       <DependentUpon>PauseBill.cs</DependentUpon>
@@ -184,7 +184,7 @@
     <EmbeddedResource Include="PageWarehouse\TypeProduct.resx">
       <DependentUpon>TypeProduct.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ReprotOrder.rdlc" />
+    <EmbeddedResource Include="Report1.rdlc" />
     <EmbeddedResource Include="Warehouse.resx">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </EmbeddedResource>
@@ -218,6 +218,9 @@
     <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UserControl\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
