--- a/POSTiw.csproj
+++ b/POSTiw.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="LowProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LowProduct.Designer.cs">
+      <DependentUpon>LowProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModalPage\CheckBill.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -154,6 +160,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LowProduct.resx">
+      <DependentUpon>LowProduct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModalPage\CheckBill.resx">
       <DependentUpon>CheckBill.cs</DependentUpon>
