--- a/POSTiw.csproj
+++ b/POSTiw.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Help.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Help.Designer.cs">
+      <DependentUpon>Help.cs</DependentUpon>
+    </Compile>
     <Compile Include="LowProduct.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +139,12 @@
     <Compile Include="PageWarehouse\EditProduct.Designer.cs">
       <DependentUpon>EditProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="PopularProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PopularProduct.Designer.cs">
+      <DependentUpon>PopularProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="PreviousBill.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,7 +159,19 @@
     <Compile Include="PageWarehouse\TypeProduct.Designer.cs">
       <DependentUpon>TypeProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="ReportSale.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportSale.Designer.cs">
+      <DependentUpon>ReportSale.cs</DependentUpon>
+    </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <Compile Include="User.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="User.Designer.cs">
+      <DependentUpon>User.cs</DependentUpon>
+    </Compile>
     <Compile Include="Warehouse.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,6 +184,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Help.resx">
+      <DependentUpon>Help.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LowProduct.resx">
       <DependentUpon>LowProduct.cs</DependentUpon>
@@ -188,6 +215,9 @@
     <EmbeddedResource Include="PageWarehouse\EditProduct.resx">
       <DependentUpon>EditProduct.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PopularProduct.resx">
+      <DependentUpon>PopularProduct.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PreviousBill.resx">
       <DependentUpon>PreviousBill.cs</DependentUpon>
     </EmbeddedResource>
@@ -204,6 +234,12 @@
       <DependentUpon>TypeProduct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Report1.rdlc" />
+    <EmbeddedResource Include="ReportSale.resx">
+      <DependentUpon>ReportSale.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="User.resx">
+      <DependentUpon>User.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Warehouse.resx">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </EmbeddedResource>
