--- a/POSTiw.csproj
+++ b/POSTiw.csproj
@@ -71,6 +71,7 @@
     <Compile Include="CheckReport.Designer.cs">
       <DependentUpon>CheckReport.cs</DependentUpon>
     </Compile>
+    <Compile Include="DTO\ProductLow.cs" />
     <Compile Include="Form2.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +101,12 @@
     </Compile>
     <Compile Include="ModalPage\PauseBill.Designer.cs">
       <DependentUpon>PauseBill.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModalPage\ProductLowModal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModalPage\ProductLowModal.Designer.cs">
+      <DependentUpon>ProductLowModal.cs</DependentUpon>
     </Compile>
     <Compile Include="ModalPage\SelecteBill.cs">
       <SubType>Form</SubType>
@@ -178,7 +185,10 @@
     <Compile Include="Warehouse.Designer.cs">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="CheckReport.rdlc" />
+    <EmbeddedResource Include="ModalPage\ProductLowModal.resx">
+      <DependentUpon>ProductLowModal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportAll\CheckReport.rdlc" />
     <EmbeddedResource Include="CheckReport.resx">
       <DependentUpon>CheckReport.cs</DependentUpon>
     </EmbeddedResource>
@@ -233,7 +243,8 @@
     <EmbeddedResource Include="PageWarehouse\TypeProduct.resx">
       <DependentUpon>TypeProduct.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Report1.rdlc" />
+    <EmbeddedResource Include="ReportAll\LowReport.rdlc" />
+    <EmbeddedResource Include="ReportAll\Report1.rdlc" />
     <EmbeddedResource Include="ReportSale.resx">
       <DependentUpon>ReportSale.cs</DependentUpon>
     </EmbeddedResource>
@@ -246,6 +257,7 @@
     <None Include="packages.config" />
     <None Include="Properties\DataSources\OrderDetail.datasource" />
     <None Include="Properties\DataSources\OrderDTO.datasource" />
+    <None Include="Properties\DataSources\POSTiw.DTO.ProductLow.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
