--- a/POSTiw.csproj
+++ b/POSTiw.csproj
@@ -97,6 +97,12 @@
     <Compile Include="ModalPage\CheckBill.Designer.cs">
       <DependentUpon>CheckBill.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModalPage\EditStore.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModalPage\EditStore.Designer.cs">
+      <DependentUpon>EditStore.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModalPage\PauseBill.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -186,6 +192,9 @@
     <Compile Include="Warehouse.Designer.cs">
       <DependentUpon>Warehouse.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ModalPage\EditStore.resx">
+      <DependentUpon>EditStore.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ModalPage\ProductLowModal.resx">
       <DependentUpon>ProductLowModal.cs</DependentUpon>
     </EmbeddedResource>
