--- a/POSTiw.csproj
+++ b/POSTiw.csproj
@@ -292,7 +292,9 @@
       <DependentUpon>TypeProduct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ReportAll\LowReport.rdlc" />
-    <EmbeddedResource Include="ReportAll\Report1.rdlc" />
+    <EmbeddedResource Include="ReportAll\Report1.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReportAll\ReportAll.rdlc" />
     <EmbeddedResource Include="ReportSale.resx">
       <DependentUpon>ReportSale.cs</DependentUpon>
